src/resources/css/style.css
/* -----------------------------------------------------------------------------
* Common.
* ----------------------------------------------------------------------------- */

.tribe-ext-events-control-text,
.tribe-common .tribe-ext-events-control-text {
	color: #141827;
	font-family: "Helvetica Neue", Helvetica, -apple-system, BlinkMacSystemFont, Roboto, Arial, sans-serif;
	font-weight: 400;
	line-height: 1.38;
}

.tribe-ext-events-control-text--bold,
.tribe-common .tribe-ext-events-control-text--bold {
	font-weight: 700;
}

.tribe-ext-events-control-text--red,
.tribe-common .tribe-ext-events-control-text--red {
	color: #DA394D;
}

.tribe-ext-events-control-text--blue,
.tribe-common .tribe-ext-events-control-text--blue {
	color: #334AFF;
}
.tribe-ext-events-control-text--live-icon,
.tribe-ext-events-control-text--alert-icon  {
	display: inline-flex;
	align-items: center;
}

.tribe-ext-events-control-text--live-icon::before,
.tribe-common .tribe-ext-events-control-text--live-icon::before {
	background-image: url('../images/live.svg');
	background-repeat: no-repeat;
	background-size: contain;
	display: inline-block;
	content: '';
	height: 12px;
	width: 17px;
	margin-right: 8px;
}

.tribe-ext-events-control-text--alert-icon::before,
.tribe-common .tribe-ext-events-control-text--alert-icon::before {
	background-image: url('../images/alert.svg');
	background-repeat: no-repeat;
	background-size: 15px;
	display: inline-block;
	content: '';
	min-width: 15px;
	height: 15px;
	margin-right: 8px;
}

.tribe-common .tribe-ext-events-control-status-archive-container {
	display: inline-block;
}

.tribe-common .tribe-ext-events-control-icon {
	display: inline-block;
	background-repeat: no-repeat;
	background-size: contain;
	margin-right: 8px;
}

.tribe-common .tribe-ext-events-control-icon--live {
	background-image: url('../images/live.svg');
	height: 12px;
	width: 17px;
}

/* -----------------------------------------------------------------------------
 * Online Event
 * ----------------------------------------------------------------------------- */

.tribe-events .tribe-ext-events-control-online-event {
	display: flex;
	align-items: center;
}

/* Month */
.tribe-events .tribe-events-calendar-month .tribe-ext-events-control-online-event {
	display: inline-block;
}

.tribe-events .tribe-events-calendar-month .tribe-ext-events-control-online-event__text {
	/* visually hide */
	border: 0;
	clip: rect(0 0 0 0);
	height: 1px;
	margin: -1px;
	overflow: hidden;
	padding: 0;
	position: absolute;
	width: 1px;
}

/* List + Day */
.tribe-events .tribe-events-calendar-list .tribe-ext-events-control-online-event,
.tribe-events .tribe-events-calendar-day .tribe-ext-events-control-online-event {
		margin-bottom: 8px;
}

.tribe-common--breakpoint-medium.tribe-events .tribe-events-calendar-list .tribe-ext-events-control-online-event,
.tribe-common--breakpoint-medium.tribe-events .tribe-events-calendar-day .tribe-ext-events-control-online-event {
		margin-bottom: 16px;
}

.tribe-events .tribe-events-calendar-list .tribe-ext-events-control-online-event:last-child,
.tribe-events .tribe-events-calendar-day .tribe-ext-events-control-online-event:last-child {
		margin-bottom: 0;
}

/* Week */

/* Photo */
.tribe-events-pro .tribe-events-pro-photo__event.tribe-ext-events-control-list-event--live { /* @todo: fix class name */
	position: relative;
}

.tribe-events-pro .tribe-events-pro-photo .tribe-ext-events-control-online-event {
	align-items: center;
	background-color: #E5E7EA;
	border-radius: 13px;
	display: flex;
	height: 26px;
	justify-content: center;
	left: 33px;
	position: absolute;
	top: 12px;
	width: 37px;
}

.tribe-common--breakpoint-medium.tribe-events-pro .tribe-events-pro-photo .tribe-ext-events-control-online-event {
	left: 36px;
}

.tribe-events-pro .tribe-events-pro-photo .tribe-ext-events-control-online-event__icon {
	margin-right: 0;
}

.tribe-events-pro .tribe-events-pro-photo .tribe-ext-events-control-online-event__text {
	/* visually hide */
	border: 0;
	clip: rect(0 0 0 0);
	height: 1px;
	margin: -1px;
	overflow: hidden;
	padding: 0;
	position: absolute;
	width: 1px;
}

/* Map */
.tribe-events-pro .tribe-events-pro-map .tribe-ext-events-control-online-event {
	font-size: 11px;
	line-height: 1.5;
}

.tribe-common--breakpoint-medium.tribe-events-pro .tribe-events-pro-map .tribe-ext-events-control-online-event {
	font-size: 12px;
	line-height: 1.38;
}





/* -----------------------------------------------------------------------------
* Month.
* ----------------------------------------------------------------------------- */

.tribe-events .tribe-events-calendar-month__events .tribe-ext-events-control-list-event--live::before {
	background-color: #334aff;
	content: "";
	height: 100%;
	left: 7px;
	position: absolute;
	width: 2px;
}

/* -----------------------------------------------------------------------------
* Week.
* ----------------------------------------------------------------------------- */

.tribe-events-pro .tribe-events-pro-week-grid__event.tribe-ext-events-control-list-event--live .tribe-events-pro-week-grid__event-link-inner::before {
	background: #334aff;
	content: "";
	height: 100%;
	left: 0;
	top: 0;
	position: absolute;
	width: 2px;
}

/* -----------------------------------------------------------------------------
* List.
* ----------------------------------------------------------------------------- */

.tribe-common-g-row.tribe-ext-events-happening-now__event-row .tribe-ext-events-control-list-event--live,
.tribe-events-calendar-day .tribe-common-g-row,
.tribe-common-g-row.tribe-events-calendar-list__event-row,
.tribe-common--breakpoint-medium.tribe-events .tribe-ext-events-control-list-event--live {
	position: relative;
}

.tribe-common--breakpoint-medium.tribe-events .tribe-ext-events-happening-now--single.tribe-ext-events-happening-now .tribe-events-calendar-list__event-row {
	border-left: 4px solid #334AFF;
}

.tribe-common--breakpoint-medium.tribe-events .tribe-ext-events-happening-now--single.tribe-ext-events-happening-now .tribe-events-calendar-list__event.tribe-ext-events-control-list-event--live::after {
	display: none;
}

.tribe-events .tribe-ext-events-happening-now__event-row .tribe-events-calendar-list__event.tribe-ext-events-control-list-event--live::after {
	right: calc(100% + 51px);
}

.tribe-events .tribe-events-calendar-list__event.tribe-ext-events-control-list-event--live::after {
	background-color: #334aff;
	content: "";
	height: 100%;
	right: calc(100% - 3px);
	position: absolute;
	width: 3px;
}

.tribe-common--breakpoint-medium.tribe-events .tribe-events-calendar-list__event.tribe-ext-events-control-list-event--live::after {
	left: -1px;
	width: 4px;
}

.tribe-events .tribe-events-calendar-day__event.tribe-ext-events-control-list-event--live::after {
	background-color: #334AFF;
	content: '';
	height: 100%;
	left: 21px;
	position: absolute;
	width: 3px;
}

.tribe-common--breakpoint-medium.tribe-events .tribe-events-calendar-day__event.tribe-ext-events-control-list-event--live::after {
	left: calc(11.111% - 24px);
	width: 4px;
}

.tribe-ext-events-control-list-status,
.tribe-common .tribe-ext-events-control-list-status {
	margin-right: 8px;
}

.tribe-ext-events-happening-now--single .tribe-events-c-small-cta {
	margin-top: 12px;
}

.tribe-common--breakpoint-medium.tribe-ext-events-happening-now--single .tribe-events-c-small-cta {
	margin-top: 16px;
}

/* -----------------------------------------------------------------------------
* Single.
* ----------------------------------------------------------------------------- */
.tribe-ext-events-control-single-notice {
	border: 1px solid #D5D5D5;
	padding: 12px 20px;
	margin-bottom: 20px;
	font-size: 14px;
}

.tribe-ext-events-control-single-notice--postponed,
.tribe-ext-events-control-single-notice--canceled {
	border-left-width: 4px;
	border-left-color: #DA394D;
}

.tribe-ext-events-control-single-notice--live {
	border-radius: 4px;
	display: inline-flex;
}

.tribe-ext-events-control-single-notice-description {
	padding-left: 23px;
	margin-bottom: 10px;
}

.tribe-ext-events-control-single-notice-description:last-child {
	margin-bottom: 0;
}

.tribe-ext-events-control-single-notice-live-link {
	margin-left: 10px;
}

.tribe-ext-events-control-single-notice-live-link a {
	color: #141827;
	border-bottom: 1px solid #334AFF;
}

.tribe-ext-events-control-single-notice-live-link a:hover,
.tribe-ext-events-control-single-notice-live-link a:focus {
	color: #334AFF;
}

